module(
    name = "rules_hiera",
    version = "0.0.1",
    repo_name = "rules_hiera",
)

bazel_dep(name = "platforms", version = "0.0.7")

repos = use_extension("@rules_hiera//hiera:extensions.bzl", "repositories")

repos.download(
    version = "0.6.5",
    sha256 = "92d2c8046f37510270d95e69409435a41b90504b76a16e5f57288233ac706c45",
    os = "linux",
    arch = "amd64",
)

use_repo(
    repos,
    "hiera",
)

register_toolchains(
    "@rules_hiera//:linux_amd64_toolchain",
)
