module(
    name = "rules_hiera",
    version = "0.0.1",
    repo_name = "rules_hiera",
)

bazel_dep(name = "platforms", version = "0.0.7")
bazel_dep(name = "rules_pkg", version = "0.9.1")

repos = use_extension("@rules_hiera//hiera:extensions.bzl", "repositories")

use_repo(
    repos,
    "hiera_linux_amd64",
    "hiera_linux_arm64",
    "hiera_darwin_amd64",
    "hiera_darwin_arm64",
)

register_toolchains(
    "@rules_hiera//:linux_amd64_toolchain",
    "@rules_hiera//:linux_arm64_toolchain",
    "@rules_hiera//:darwin_amd64_toolchain",
    "@rules_hiera//:darwin_arm64_toolchain",
)
