load("@rules_hiera//hiera:def.bzl", "hiera_lookup", "hiera_tar")

hiera_lookup(
    name = "bar",
    keys = ["bar"],
    merge = "deep",
    hieradata = "//hieradata",
    render_as = "json",
    vars = {
        "scope": "test",
    },
)

hiera_lookup(
    name = "array",
    keys = ["array"],
    merge = "deep",
    hieradata = "//hieradata",
    render_as = "json",
    vars = {
        "scope": "test",
    },
)

hiera_tar(
    name = "hiera-tar",
    base = "//hieradata",
    hieradata = "//hieradata-additional",
    prefix    = "hieradata",
)

hiera_lookup(
    name = "array2",
    keys = ["array"],
    hieradata = ":hiera-tar",
    config = "hieradata/hiera.yaml",
    merge = "deep",
    render_as = "json",
    vars = {
        "scope": "test2",
    },
)

hiera_lookup(
    name = "array2-outfile",
    keys = ["array"],
    hieradata = ":hiera-tar",
    config = "hieradata/hiera.yaml",
    merge = "deep",
    out   = "my_array.yaml",
    vars = {
        "scope": "test2",
    },
)
